[project]
name = "achievements"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4,<3.0.0",
    "pymongo>=4.17.0",
    "strawberry-graphql[cli]>=0.320.4",
    "uvicorn>=0.51.0",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# line too long, unsorted imports, unused imports
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
